@@ -1,3 +1,12 @@
+2002-12-07  Danny Smith  <dannysmith@users.sourveforge.net>
+	
+	* include/winuser.h (AllowSetForegroundWindow,
+	LockSetForegroundWindow) Add prototypes.
+	(ASFW_ANY, LSFW_LOCK, LSFW_UNLOCK) Add defines.
+	Thanks to:  Pat Thoyts  <patthoyts@users.sourceforge.net>
+	* lib/winuser.def (AllowSetForegroundWindow,
+	LockSetForegroundWindow): Add stubs. 
+
 2002-12-06  Ken Fitlike  <kenfitlike@users.sourceforge.net>
 
 	* include/commctrl.h (TN_GETDISPINFO[AW]): Add defines and
